--- a/styles/input.scss
+++ b/styles/input.scss
@@ -1,18 +1,19 @@
-@import "globals";
+@import "_globals.scss";
 
 header {
-  min-height: 715px;
-  background: url("/assets/header_half.png") no-repeat fixed center;
+  background: url("/assets/header_half.jpg") no-repeat center;
   text-transform: uppercase;
+  text-align: center;
   img {
     max-height: 46px;
   }
   .mobile-bg2 {
-    background-image: url("/assets/players_1.png");
+    background-image: url("/assets/players_1.jpg");
     min-height: 195px;
   }
   input {
-    margin-left: 135px;
+    width: 270px;
+    height: 60px;
   }
 }
 input {
@@ -21,9 +22,17 @@ input {
 
 @media only screen and (min-width: 769px) {
   header {
-    background-image: url("/assets/header.png");
+    min-height: 715px;
+    background-image: url("/assets/header.jpg");
+    .header-txt-wrap {
+      margin-left: 135px;
+      margin-top: 143px;
+      text-align: left;
+    }
     h4.nav-link {
       display: none;
+    }
+    input {
     }
   }
   .mobile-bg2 {
