--- a/styles/output.css
+++ b/styles/output.css
@@ -1,17 +1,22 @@
+.btn-green {
+  background-color: #18b923;
+}
+
 header {
-  min-height: 715px;
-  background: url("/assets/header_half.png") no-repeat fixed center;
+  background: url("/assets/header_half.jpg") no-repeat center;
   text-transform: uppercase;
+  text-align: center;
 }
 header img {
   max-height: 46px;
 }
 header .mobile-bg2 {
-  background-image: url("/assets/players_1.png");
+  background-image: url("/assets/players_1.jpg");
   min-height: 195px;
 }
 header input {
-  margin-left: 135px;
+  width: 270px;
+  height: 60px;
 }
 
 input {
@@ -20,12 +25,17 @@ input {
 
 @media only screen and (min-width: 769px) {
   header {
-    background-image: url("/assets/header.png");
+    min-height: 715px;
+    background-image: url("/assets/header.jpg");
+  }
+  header .header-txt-wrap {
+    margin-left: 135px;
+    margin-top: 143px;
+    text-align: left;
   }
   header h4.nav-link {
     display: none;
   }
-
   .mobile-bg2 {
     display: none;
   }
