--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,3 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+html {
+  background-color: #e5e5e5;
+  font-family: Montserrat;
+  font-style: normal;
+}
+body {
+  background-color: #ffffff;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 $prime-color-green: #18b923;
 
 .btn-green {
