--- a/styles/output.css
+++ b/styles/output.css
@@ -1,3 +1,19 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #e5e5e5;
+  font-family: Montserrat;
+  font-style: normal;
+}
+
+body {
+  background-color: #ffffff;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .btn-green {
   background-color: #18b923;
 }
@@ -6,21 +22,23 @@ header {
   background: url("/assets/header_half.jpg") no-repeat center;
   text-transform: uppercase;
   text-align: center;
+  min-height: 476px;
 }
 header img {
   max-height: 46px;
 }
-header .mobile-bg2 {
-  background-image: url("/assets/players_1.jpg");
-  min-height: 195px;
+header .header-txt-wrap {
+  margin-top: 60px;
+  margin-left: 30px;
+  text-align: left;
 }
-header input {
-  width: 270px;
-  height: 60px;
-}
-
 input {
   background-color: #18b923;
+}
+
+.mobile-bg2 {
+  background: url("/assets/players_1.jpg") no-repeat center;
+  min-height: 195px;
 }
 
 @media only screen and (min-width: 769px) {
@@ -36,6 +54,14 @@ input {
   header h4.nav-link {
     display: none;
   }
+  header img {
+    max-height: 97px;
+  }
+  header input {
+    width: 270px;
+    height: 60px;
+  }
+
   .mobile-bg2 {
     display: none;
   }
