add info content

--- a/styles/input.scss
+++ b/styles/input.scss
@@ -17,7 +17,7 @@ header {
   }
 }
 input {
-  background-color: $prime-color-green;
+  background-color: $primary-color-green;
 }
 .mobile-bg2 {
   background: url("/assets/players_1.jpg") no-repeat center;
