--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,19 +1,11 @@
+//colors
+$primary-color-green: #18b923;
+$secondary-color-darkblue: #1c1a2e;
+
 * {
   box-sizing: border-box;
 }
-html {
-  background-color: #e5e5e5;
-  font-family: Montserrat;
-  font-style: normal;
-}
-body {
-  background-color: #ffffff;
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-$prime-color-green: #18b923;
 
 .btn-green {
-  background-color: $prime-color-green;
+  background-color: $primary-color-green;
 }
