--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,10 @@
-
+html {
+  background-color: #e5e5e5;
+  font-family: Montserrat;
+  font-style: normal;
+}
+body {
+  background-color: #ffffff;
+  max-width: 1440px;
+  margin: 0 auto;
+}
