work in progres html

--- a/styles/input.scss
+++ b/styles/input.scss
@@ -1,7 +1,7 @@
 @import "_globals.scss";
 
 header {
-  background: url("/assets/header_half.jpg") no-repeat center;
+  background: url("../assets/header_half.jpg") no-repeat center;
   text-transform: uppercase;
   text-align: center;
   min-height: 476px;
@@ -16,18 +16,28 @@ header {
   input {
   }
 }
+
+section {
+  text-transform: uppercase;
+  div {
+    text-align: center;
+  }
+}
+
 input {
   background-color: $primary-color-green;
 }
+
 .mobile-bg2 {
-  background: url("/assets/players_1.jpg") no-repeat center;
-  min-height: 195px;
+  background: url("../assets/players_769.jpg") no-repeat center;
+  //background-position: top -60px;
+  min-height: 433px;
 }
 
 @media only screen and (min-width: 769px) {
   header {
     min-height: 715px;
-    background-image: url("/assets/header.jpg");
+    background-image: url("../assets/header.jpg");
     .header-txt-wrap {
       margin-left: 135px;
       margin-top: 143px;
