--- a/styles/output.css
+++ b/styles/output.css
@@ -7,10 +7,11 @@
 }
 
 header {
-  background: url("../assets/header_half.jpg") no-repeat center;
+  background: url("../assets/hero_image_360.jpg") no-repeat center;
+  background-size: cover;
   text-transform: uppercase;
   text-align: center;
-  min-height: 476px;
+  min-height: 428px;
 }
 header img {
   max-height: 46px;
@@ -19,6 +20,32 @@ header .header-txt-wrap {
   margin-top: 60px;
   margin-left: 30px;
   text-align: left;
+}
+
+.mobile-bg2 {
+  background: url("../assets/players_769.jpg") no-repeat center;
+  background-size: cover;
+  min-height: 325px;
+  position: relative;
+  top: -10px;
+}
+
+.centered-img {
+  display: block;
+  width: 75%;
+  margin: 0 auto;
+}
+
+.costs {
+  text-align: center;
+  background: url("../assets/price_image_2.jpg") no-repeat center;
+}
+.costs h5 {
+  padding-top: 55px;
+}
+.costs ul {
+  margin: 0 auto;
+  width: 50%;
 }
 section {
   text-transform: uppercase;
@@ -29,11 +56,6 @@ section div {
 
 input {
   background-color: #18b923;
-}
-
-.mobile-bg2 {
-  background: url("../assets/players_769.jpg") no-repeat center;
-  min-height: 433px;
 }
 
 @media only screen and (min-width: 769px) {
