--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,6 @@ body {
   margin: 0 auto;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
+  font-size: 16px;
+  text-align: center;
 }
